# cpp-logger

./: .gitignore  .travis.yml  BUILD  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile.in  README.md  configure  configure.ac  doxyfile.in  sonar-project.properties  sonar-project.properties.in
.github/ISSUE_TEMPLATE/: bug_report.md
cmake/: CMakeLists.txt.in  CoverageConfig.cmake  FGCOV  GTestConfig.cmake  GTestExtConfig.cmake  LCOV  SonarCloudConfig.cmake  sonar-project.properties.in
include/logger/: config.h.in  cpp-logger.hpp  definitions.hpp  exceptions.hpp  facilities.hpp  logger.hpp  registry.hpp  sinks.hpp
src/: Makefile.in  config.h.in  configure  configure.ac  cpp-logger.cpp  cpp-logger.cpp.in  exceptions.cpp  facilities.cpp  file_sink.cpp  logger.cpp  registry.cpp  sink.cpp  stderr_sink.cpp  stdout_sink.cpp  syslog_sink.cpp
tests/: CMakeLists.txt  Makefile.in  configure  configure.ac  exception_tests.cpp  facility_tests.cpp  logger-prof.cpp  logger-test.cpp  logger_performance_tests.cpp  logger_prof.cpp  logger_test.cpp  logger_tests.cpp  registry_test.cpp  registry_tests.cpp  sink_tests.cpp
